Готовый макет без адаптива

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <div class="block-3">
         <div class="block-3__text-wrap">
-            <div class="block-3__question">Why Brella?</div>
+            <div class="small-text">Why Brella?</div>
             <div class="title">
                 Today, any health insurance deductible can feel like a high deductible.
             </div>
@@ -120,20 +120,23 @@
     <div class="block-5">
         <div class="block-5__section-1">
             <div class="section-1__text-wrap">
-                <div class="section-1__small-text">one plan, more coverage</div>
+                <div class="small-text">one plan, more coverage</div>
                 <div class="title">No one can predict which health issues might come their way.</div>
-                <div class="extra-text">Our broad supplemental coverage gets rid of the guesswork and puts cash in your team’s pockets for most conditions that require urgent medical attention.</div>
+                <div class="extra-text">Our broad supplemental coverage gets rid of the guesswork and puts cash in your
+                    team’s pockets for most conditions that require urgent medical attention.</div>
             </div>
             <img src="images/Rectangle (5).svg" alt="">
         </div>
         <div class="block-5__section-2">
             <div class="numbers-wrap">
                 <div class="number">5K</div>
-                <div class="graph__extra-text">covered injuries and illnesses from fractures and appendicitis to cancer</div>
+                <div class="graph__extra-text">covered injuries and illnesses from fractures and appendicitis to cancer
+                </div>
             </div>
             <div class="numbers-wrap">
                 <div class="number">1X</div>
-                <div class="graph__extra-text">more covered conditions than Accident and Critical Illness plans—combined</div>
+                <div class="graph__extra-text">more covered conditions than Accident and Critical Illness plans—combined
+                </div>
             </div>
             <div class="numbers-wrap">
                 <div class="number">40 %</div>
@@ -147,13 +150,125 @@
         <div class="block-5__section-3">
             <img src="images/Rectangle (6).svg" alt="">
             <div class="section-3__text-wrap">
-                <div class="section-3__small-text">a better claims experience</div>
+                <div class="small-text">a better claims experience</div>
                 <div class="title">Give your people a plan that pays in hours—not weeks.</div>
-                <div class="extra-text">Your team can’t wait for peace of mind. Brella pays on diagnosis, so members can file a claim sooner and get paid faster via our Member Portal or mobile app.</div>
+                <div class="extra-text">Your team can’t wait for peace of mind. Brella pays on diagnosis, so members can
+                    file a claim sooner and get paid faster via our Member Portal or mobile app.</div>
                 <button class="no-borders-button">Play Video</button>
             </div>
         </div>
     </div>
+
+    <div class="block-6">
+        <div class="block-6__text-wrap">
+            <div class="small-text">for employers</div>
+            <div class="title">Easy enrollment meets simple administration.</div>
+            <div class="extra-text">Brella brings 100% paperless implementation, enrollment, and admin. Plug into our
+                platforms or we’ll plug into yours.</div>
+            <button class="no-borders-button">Learn more</button>
+        </div>
+    </div>
+
+    <div class="block-7">
+        <div class="block-7__wrap">
+            <div class="title">Proudly backed by</div>
+            <div class="slider">
+                <img src="images/Vector (17).svg" alt="">
+                <img src="images/Rectangle (8).svg" alt="">
+                <img src="images/Rectangle (9).svg" alt="">
+                <img src="images/Rectangle (10).svg" alt="">
+                <img src="images/Rectangle (11).svg" alt="">
+                <img src="images/Rectangle (12).svg" alt="">
+                <img src="images/Vector16.svg" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div class="block-8">
+        <div class="article-wrap">
+            <img src="images/Rectangle (13).svg" alt="">
+            <div class="small-text">Podcast</div>
+            <div class="article-title">Better Voluntary Benefits with NFP Voluntary Benefits Practice Leader, Kim Heald
+            </div>
+        </div>
+        <div class="article-wrap">
+            <img src="images/Rectangle (14).svg" alt="">
+            <div class="small-text">Insurance Innovation</div>
+            <div class="article-title">How to Design Simpler Insurance Benefits</div>
+        </div>
+        <div class="article-wrap">
+            <img src="images/Rectangle (15).svg" alt="">
+            <div class="small-text">Benefits Strategy</div>
+            <div class="article-title">Executive Benefits Outlook with Dan Aceti</div>
+        </div>
+    </div>
+
+    <div class="block-9">
+        <div class="block-9__left-section"><img src="images/Rectangle (16).svg" alt=""></div>
+        <div class="block-9__right-section">
+            <div class="block-9__text-wrap">
+                <div class="title">Ready to explore Brella’s supplemental health solution?</div>
+                <div class="title">Let’s talk.</div>
+                <button>Get in touch</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="footer-wrap">
+            <div class="footer__section-1">
+                <div class="footer__links">
+                    <div class="footer__logo"><img src="images/Vector (18).svg" alt=""></div>
+                    <div class="footer__links__section">
+                        <div class="main-links">Join Brella</div>
+                        <div>Our Plan</div>
+                        <div>Employers</div>
+                        <div>Brokers</div>
+                        <div>Members</div>
+                    </div>
+                    <div class="footer__links__section">
+                        <div class="main-links">Company</div>
+                        <div>About</div>
+                        <div>Blog</div>
+                        <div>Careers</div>
+                        <div>Contact</div>
+                    </div>
+                </div>
+                <div class="mailing-form">
+                    <div>GET THE LATEST</div>
+                    <div>Sign up to receive benefits news and insights in your inbox once a month.</div>
+                    <div class="footer__input-wrap">
+                        <input type="email" placeholder="Email*">
+                        <button type="submit"></button>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__section-2">
+                <div class="footer-text">
+                    <div>Brella is a limited benefit policy; it is not a substitute for health insurance. The
+                        information
+                        provided on this website is illustrative only. A complete description of benefits, limitations,
+                        and exclusions are provided in your certificate of Insurance and applicable Riders. For a
+                        summary of limitations and exclusions, see our FAQ. Payout values listed do not guarantee an
+                        amount to be paid for listed conditions. Product not available in all states. All coverage is
+                        subject to the terms and conditions of the master group policy.</div>
+                    <div>Brella is underwritten by Greenhouse Life Insurance Company (NAIC 80055). Form No. PFSB11-TX
+                    </div>
+                    <div>Reach us by mail at 2093 Philadelphia Pike #2496, Claymont, DE 19703 and by phone at (844)
+                        987-1070</div>
+                </div>
+                <div class="last-line">
+                    <div>© 2021 Brella Insurance Inc. All Rights Reserved.</div>
+                    <div>Privacy | Terms of Service</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
 </body>
 
 </html>
