Добавила один медиа-запрос

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.scss">
-
+    <link rel="stylesheet" href="style_media.scss">
 </head>
 
 <body>
@@ -25,6 +25,7 @@
         <div class="login">Login</div>
         <div class="lang">en</div>
     </div>
+
 
     <div class="block-1">
         <div class="block-1__text-wrap">
@@ -148,7 +149,7 @@
             </div>
         </div>
         <div class="block-5__section-3">
-            <img src="images/Rectangle (6).svg" alt="">
+            <div class="section-3__img-wrap"> <img src="images/Rectangle (6).svg" alt=""></div>
             <div class="section-3__text-wrap">
                 <div class="small-text">a better claims experience</div>
                 <div class="title">Give your people a plan that pays in hours—not weeks.</div>
@@ -204,7 +205,7 @@
     </div>
 
     <div class="block-9">
-        <div class="block-9__left-section"><img src="images/Rectangle (16).svg" alt=""></div>
+        <div class="block-9__left-section"></div>
         <div class="block-9__right-section">
             <div class="block-9__text-wrap">
                 <div class="title">Ready to explore Brella’s supplemental health solution?</div>
@@ -241,6 +242,11 @@
                         <input type="email" placeholder="Email*">
                         <button type="submit"></button>
                     </div>
+                    <div class="footer__icons-wrap">
+                        <img src="images/Frame (3).svg" alt="">
+                        <img src="images/Frame (4).svg" alt="">
+                        <img src="images/Group (2).svg" alt="">
+                    </div>
                 </div>
             </div>
             <div class="footer__section-2">
@@ -264,11 +270,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
 </body>
 
 </html>
